# highlight-scout

./: AGENTS.md  README.md  package.json
.github/workflows/: release.yml
docs/: DEPLOY.md  index.html
docs/superpowers/plans/: 2026-06-21-formatting-and-copy-v052.md  2026-06-21-ocr-image-text-v054.md  2026-06-21-scheduled-syncs.md  2026-06-21-tweet-structure-import-v053a.md
src/: App.tsx  RelatedWindow.tsx  WorkWindow.tsx  index.css  main.tsx  types.ts  version.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/ocr-helper/: main.swift
src-tauri/src/: config.rs  import_log.rs  lib.rs  main.rs  models.rs  ocr.rs  qmd.rs  r2.rs
src-tauri/src/commands/: clipboard.rs  import.rs  mod.rs  search.rs  settings.rs
src-tauri/src/import/: archive.rs  common.rs  csv_import.rs  json_format.rs  kindle.rs  mod.rs  readwise.rs  readwise_seed.rs  readwise_tweets.rs  tweet_common.rs  x.rs  zotero.rs
src-tauri/src/index/: sqlite.rs
src-tauri/src/sync/: mod.rs
src/components/: CommandPalette.tsx  CopyMenu.tsx  CsvMappingPanel.tsx  FilterBar.tsx  FilterPopover.tsx  HighlightDetail.tsx  ImportLogPanel.tsx  ImportMenu.tsx  ReadingPane.tsx  ResultsList.tsx  SearchBar.tsx  SettingsPanel.tsx  TagPicker.tsx  Toolbar.tsx  WorkView.tsx
src/lib/: api.ts  clipboard.ts  copyFormats.test.ts  copyFormats.ts  format.ts  grouping.ts  keybindings.ts  markdown.test.ts  markdown.tsx  persist.ts  query.test.ts  query.ts  snippet.tsx  stopwords.ts  textsize.ts  window.ts
(+4 files in other folders)
