[package]
name = "highlight-scout"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "highlight_scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "=0.31.0", features = ["bundled"] }
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
slug = "0.1.6"
tauri-plugin-global-shortcut = "2"
anyhow = "1.0.102"
tauri-plugin-autostart = "2"
htmd = "0.5.4"
regex = "1.12.4"
tauri-plugin-clipboard-manager = "2"
sha1 = "0.11.0"
csv = "1.4.0"
tauri-plugin-dialog = "2"
dirs = "6.0.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

